k8s/manifests/ingress/deploy-svc-app-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  labels: 
    app: deathstar
spec:
  replicas: 2
  selector:
    matchLabels: 
    app: deathstar
  template:
    metadata:
      labels:
        app: deathstar
    spec:
      containers:
      - name: vader-app
        image: mustafaevsl/k8s-php-test:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: deathstar
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
