k8s/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: kuber-service-v1
                port:
                  number: 8080
          - pathType: Exact # имя должно полностью совпадать
            path: /v2
            backend:
              service:
                name: kuber-service-v2
                port:
                  number: 8080
      - host: app-v3-example.com
        http:
          paths:
            - pathType: Exact
              path: /
              backend: 
                service:
                  name: kuber-service-v3
                  port:
                    number: 8080
